# ai-journal-20250806

./: .env.example  BUILD_SUMMARY.md  CLAUDE.md  README.md  debug_openai_response.py  debug_tension.py  init-python-project-doc.md  mvp-backend-architecture.md  mvp-implementation-specifications.md  mvp-specifications.md  pyproject.toml  run_server.py  specifications.md  test_basic.py  test_example.py  test_tension_summary_fixed.py  test_validation.py  v2-completion-summary.md  v2-implementation-specifications.md  v3-completion-summary.md  v3-data-flow-diagrams.md  v3-implementation-specifications.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: JournalForm.tsx  PerspectiveCard.tsx  PerspectivesTable.tsx  ProphecySection.tsx  ReflectionDisplay.tsx
frontend/src/components/ui/: button.tsx  textarea.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/types/: api.ts
src/ai_journal/: __init__.py  agents.py  composer.py  config.py  excavation.py  facd.py  logging_config.py  main.py  mock_data.py  models.py  oracle.py  orchestrator.py  service.py
static/: index.html
static/assets/: index-2b162bb6.js  index-47f45f15.js  index-49603542.css  index-4f84bf50.js  index-704b0209.js  index-92b1da42.css  index-a4d8e343.css  index-bbbb904b.js  index-c8989c5e.css  index-ca1d3db7.css  index-eb622b0a.css
tests/: conftest.py  test_debug_logging.py  test_example.py  test_models.py  test_structured_agreement.py  test_tension_summary.py  test_tension_summary_fixed.py  test_v2_basic.py  test_v3_facd.py
