[project]
name = "ai-journal"
version = "0.1.0"
description = ""
authors = [
    {name = "neocypher",email = "5590838+neocypher-x@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "doppler-env (>=0.3.1,<0.4.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.30.0,<0.31.0)",
    "openai (>=1.51.0,<2.0.0)",
    "pydantic (>=2.9.0,<3.0.0)",
    "python-multipart (>=0.0.9,<0.1.0)",
    "asyncio-throttle (>=1.0.2,<2.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "pytest (>=8.4.1,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "slow: Slow tests requiring external APIs",
    "debug: Debug tests for troubleshooting"
]
addopts = [
    "-v",
    "--tb=short"
]
